@@ -1237,10 +1237,7 @@
                 <modular.jdk.testsuite.args>${modular.jdk.args}
                     --add-exports=java.base/sun.security.validator=ALL-UNNAMED
                     --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
-                    --add-opens=java.base/sun.security.validator=ALL-UNNAMED
-                    --add-opens=java.management/javax.management.remote=ALL-UNNAMED
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED
                 </modular.jdk.testsuite.args>
             </properties>
         </profile>
